error.txt
main.c:1:7: error: expected declaration specifiers or '...' before string constant
 print("Hello")
       ^~~~~~~
